<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mkrooted.schoolhelper.GDZAct"
    tools:showIn="@layout/activity_gdz">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:id="@+id/b1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:id="@+id/b2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        android:id="@+id/b3"
        android:layout_below="@+id/b2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t4"
        android:id="@+id/b4"
        android:layout_alignBottom="@+id/b3"
        android:layout_alignStart="@+id/b2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t5"
        android:id="@+id/b5"
        android:layout_below="@+id/b3"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t6"
        android:id="@+id/b6"
        android:layout_below="@+id/b4"
        android:layout_alignStart="@+id/b4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t7"
        android:id="@+id/b7"
        android:layout_below="@+id/b5"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t8"
        android:id="@+id/b8"
        android:layout_below="@+id/b6"
        android:layout_alignStart="@+id/b6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t9"
        android:id="@+id/b9"
        android:layout_below="@+id/b7"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t10"
        android:id="@+id/b10"
        android:layout_alignTop="@+id/b9"
        android:layout_alignStart="@+id/b8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t11"
        android:id="@+id/b11"
        android:layout_below="@+id/b9"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t12"
        android:id="@+id/b12"
        android:layout_below="@+id/b10"
        android:layout_alignStart="@+id/b10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t13"
        android:id="@+id/b13"
        android:layout_below="@+id/b11"
        android:layout_alignParentStart="true" />
</RelativeLayout>
